# hg-editor

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
assets/prefabs/: test.hg_pfb  test2.hg_pfb
assets/scenes/: test.hgs  test2.hgs
impl/: assetBrowser.cpp  componentExplorer.cpp  editor.cpp  entityTree.cpp  entityViewer.cpp  events.cpp  fileBrowser.cpp  gizmo.cpp
include/: hge.h
include/hge/: editor.h  hge.h
include/hge/components/: assetBrowser.h  componentExplorer.h  entityTree.h  entityViewer.h  fileBrowser.h  gizmo.h  textureEditor.h
include/hge/core/: events.h  extensions.h  tool.h
include/hge/widgets/: enumField.h  textureField.h
lib/: .ninja_deps  .ninja_log  HGEditor  build.ninja  filebrowser.ini  imgui.ini  settings.hg  test  test.hgs  test2.hgs
lib/.cmake/api/v1/reply/: cache-v2-1ebf2bfc4d21f3217fc0.json  cmakeFiles-v1-802ccb929452ba968526.json  codemodel-v2-52ffaa719858f782a88b.json  codemodel-v2-f17fe77cec808efe2c30.json  index-2024-10-13T17-26-08-0242.json  index-2024-10-21T01-54-04-0842.json  target-HGEditor-Release-49bdd5c33b5343bdf12a.json  target-HGEditor-Release-a35b4d9a6917511cacb0.json  target-hge-Release-8a8f038e294762c6d9ee.json  target-hge-Release-c38bc8bca1a27845f043.json  target-imgui-Release-51aa85ce828c8af20668.json
src/: game.cpp
src/common/: gameState.h
src/common/enums/: renderModes.h
src/scenes/: mainMenu.cpp  runtime.cpp  runtime.h
src/systems/: renderer.cpp  renderer.h
wasm/: HGEditor.data
